# 3rdTask

./: .gitignore  CMakeLists.txt  Darbas2.depend  GradeCheck.cpp  Grades.txt  IntegerCheck.cpp  README.md  containerD.cpp  containerL.cpp  containerV.cpp  filefunction.cpp  fun.h  functions.h  functionsD.h  functionsL.h  main.cpp  mainwithvectors.cpp  smallFunctions.cpp  sorting.h  unit test.cpp  v01fun.cpp  v04.cpp  v05.cpp  v05Deque.cpp  v05List.cpp  v05Vector.cpp  v1.cpp
html/: _catch_8h.html  _catch_8h_source.html  _grade_check_8cpp.html  _integer_check_8cpp.html  _r_e_a_d_m_e_8md.html  annotated.html  class_catch_1_1_assertion_handler-members.html  class_catch_1_1_assertion_handler.html  class_catch_1_1_benchmark_looper-members.html  class_catch_1_1_benchmark_looper.html  class_catch_1_1_binary_expr-members.html  class_catch_1_1_binary_expr.html  class_catch_1_1_detail_1_1_approx-members.html  class_catch_1_1_detail_1_1_approx.html  class_catch_1_1_detail_1_1_is_stream_insertable-members.html  class_catch_1_1_detail_1_1_is_stream_insertable.html  class_catch_1_1_exception_translator_registrar-members.html  class_catch_1_1_exception_translator_registrar.html  class_catch_1_1_expr_lhs-members.html  class_catch_1_1_expr_lhs.html  class_catch_1_1_lazy_expression-members.html  class_catch_1_1_lazy_expression.html  class_catch_1_1_match_expr-members.html  class_catch_1_1_match_expr.html  class_catch_1_1_matchers_1_1_generic_1_1_predicate_matcher-members.html  class_catch_1_1_matchers_1_1_generic_1_1_predicate_matcher.html  class_catch_1_1_non_copyable-members.html  (+280 more)
(+63 files in other folders)
